ENEX FSL/snapshotDownload (1)/objects/Asset.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>Area__c</fullName><externalId>false</externalId><label>Area</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Isla</fullName><default>false</default><label>Isla</label></value><value><fullName>Oficina</fullName><default>false</default><label>Oficina</label></value><value><fullName>TIENDA</fullName><default>false</default><label>TIENDA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Capacidad_M3__c</fullName><externalId>false</externalId><label>Capacidad M3</label><precision>9</precision><required>false</required><scale>1</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Capacidad_Peas__c</fullName><externalId>false</externalId><label>Capacidad Peas</label><length>10</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Capacidad_Planta_de_agua__c</fullName><externalId>false</externalId><label>Capacidad</label><length>5</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Capacidad_Ptas__c</fullName><externalId>false</externalId><label>Capacidad Ptas</label><length>10</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Capacidad__c</fullName><externalId>false</externalId><label>Capacidad</label><precision>18</precision><required>false</required><scale>3</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Caudal__c</fullName><externalId>false</externalId><label>Caudal</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>BAJO</fullName><default>false</default><label>BAJO</label></value><value><fullName>ALTO</fullName><default>false</default><label>ALTO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Cloraci_n__c</fullName><externalId>false</externalId><label>Cloración</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>SI</fullName><default>false</default><label>SI</label></value><value><fullName>NO</fullName><default>false</default><label>NO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Cta_Preventiva__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Cta Preventiva</label><referenceTo>Account</referenceTo><relationshipLabel>Activos</relationshipLabel><relationshipName>Activos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Cta_Reactiva__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Cta Reactiva</label><referenceTo>Account</referenceTo><relationshipLabel>Activos (Cta Reactiva)</relationshipLabel><relationshipName>Activos1</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>DRen__c</fullName><externalId>false</externalId><label>DRen</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>SI</fullName><default>false</default><label>SI</label></value><value><fullName>NO</fullName><default>false</default><label>NO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Detector_de_Fuga_DF__c</fullName><externalId>false</externalId><label>Detector de Fuga(DF)</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>RedJacket</fullName><default>false</default><label>RedJacket</label></value><value><fullName>Fepetro</fullName><default>false</default><label>Fepetro</label></value><value><fullName>Veeder Root</fullName><default>false</default><label>Veeder Root</label></value><value><fullName>OPW</fullName><default>false</default><label>OPW</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Equipo_Dispensador__c</fullName><externalId>false</externalId><label>Equipo Dispensador</label><length>4</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Equipo__c</fullName><externalId>false</externalId><label>Equipo</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>true</sorted><value><fullName>Bomba de carga</fullName><default>false</default><label>Bomba de carga</label></value><value><fullName>Camión Aljibe</fullName><default>false</default><label>Camión Aljibe</label></value><value><fullName>Camión ALU</fullName><default>false</default><label>Camión ALU</label></value><value><fullName>Camioneta</fullName><default>false</default><label>Camioneta</label></value><value><fullName>Camioneta Aljibe</fullName><default>false</default><label>Camioneta Aljibe</label></value><value><fullName>Camión Lubricador</fullName><default>false</default><label>Camión Lubricador</label></value><value><fullName>Camión Trasvasijo Grasas</fullName><default>false</default><label>Camión Trasvasijo Grasas</label></value><value><fullName>Combustible</fullName><default>false</default><label>Combustible</label></value><value><fullName>Estacion de servicio</fullName><default>false</default><label>Estacion de servicio</label></value><value><fullName>Faena</fullName><default>false</default><label>Faena</label></value><value><fullName>Multipropósito</fullName><default>false</default><label>Multipropósito</label></value><value><fullName>Petrolera</fullName><default>false</default><label>Petrolera</label></value><value><fullName>Petrolera Semi movil</fullName><default>false</default><label>Petrolera Semi movil</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Esclavo__c</fullName><externalId>false</externalId><label>Esclavo</label><precision>1</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Faena__c</fullName><externalId>false</externalId><label>Faena</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Familia_de_Productos_MDA__c</fullName><externalId>false</externalId><label>Familia de Productos MDA</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>8-PORT</fullName><default>false</default><label>8-PORT</label></value><value><fullName>ANTENA H2H</fullName><default>false</default><label>ANTENA H2H</label></value><value><fullName>ANTENA P2P MIKROTIK</fullName><default>false</default><label>ANTENA P2P MIKROTIK</label></value><value><fullName>BAM</fullName><default>false</default><label>BAM</label></value><value><fullName>CAJA DE VENTA</fullName><default>false</default><label>CAJA DE VENTA</label></value><value><fullName>CAJON DE DINERO</fullName><default>false</default><label>CAJON DE DINERO</label></value><value><fullName>CARTELERIA DIGITAL</fullName><default>false</default><label>CARTELERIA DIGITAL</label></value><value><fullName>COMPUTADOR OFICINA</fullName><default>false</default><label>COMPUTADOR OFICINA</label></value><value><fullName>CONTROLADOR FUSION</fullName><default>false</default><label>CONTROLADOR FUSION</label></value><value><fullName>CONVERSOR ETHERNET</fullName><default>false</default><label>CONVERSOR ETHERNET</label></value><value><fullName>IMPRESORA OFICINA</fullName><default>false</default><label>IMPRESORA OFICINA</label></value><value><fullName>IMPRESORA TERMICA</fullName><default>false</default><label>IMPRESORA TERMICA</label></value><value><fullName>LECTOR CODIGO DE BARRAS</fullName><default>false</default><label>LECTOR CODIGO DE BARRAS</label></value><value><fullName>MONITOR</fullName><default>false</default><label>MONITOR</label></value><value><fullName>NUC</fullName><default>false</default><label>NUC</label></value><value><fullName>ORTR</fullName><default>false</default><label>ORTR</label></value><value><fullName>PINPAD H2H</fullName><default>false</default><label>PINPAD H2H</label></value><value><fullName>RACK</fullName><default>false</default><label>RACK</label></value><value><fullName>ROUTER</fullName><default>false</default><label>ROUTER</label></value><value><fullName>SERVIDOR</fullName><default>false</default><label>SERVIDOR</label></value><value><fullName>SURTIDOR EASYPAY</fullName><default>false</default><label>SURTIDOR EASYPAY</label></value><value><fullName>SWITCH</fullName><default>false</default><label>SWITCH</label></value><value><fullName>TELEMEDICION</fullName><default>false</default><label>TELEMEDICION</label></value><value><fullName>UPS</fullName><default>false</default><label>UPS</label></value><value><fullName>COMPUTADORA</fullName><default>false</default><label>COMPUTADORA</label></value><value><fullName>ACCESS POINT</fullName><default>false</default><label>ACCESS POINT</label></value><value><fullName>TELEFONO IP</fullName><default>false</default><label>TELEFONO IP</label></value><value><fullName>TELEFONO CELULAR</fullName><default>false</default><label>TELEFONO CELULAR</label></value></valueSetDefinition></valueSet></fields><fields><fullName>File_Estacion_de_Servicio__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>File Estación de Servicio</label><referenceTo>File_Estaci_n_de_Servicio__c</referenceTo><relationshipLabel>Activos</relationshipLabel><relationshipName>Activos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>File__c</fullName><externalId>false</externalId><label>File</label><length>3</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Horas_de_Horometro__c</fullName><externalId>false</externalId><label>Horas de Horometro</label><length>8</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Horometro_Actual__c</fullName><externalId>false</externalId><label>Horometro Actual</label><length>15</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Horometro__c</fullName><externalId>false</externalId><label>Horometro</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Mantenedor__c</fullName><externalId>false</externalId><label>Mantenedor</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>NO</fullName><default>false</default><label>NO</label></value><value><fullName>VATTEN</fullName><default>false</default><label>VATTEN</label></value><value><fullName>HIDRO5</fullName><default>false</default><label>HIDRO5</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Marca_Bomba__c</fullName><externalId>false</externalId><label>Marca Bomba</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Fepetro</fullName><default>false</default><label>Fepetro</label></value><value><fullName>RedJacket</fullName><default>false</default><label>RedJacket</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Marca_Dispensador__c</fullName><externalId>false</externalId><label>Marca Dispensador</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>WAYNE</fullName><default>false</default><label>WAYNE</label></value><value><fullName>GILBARCO</fullName><default>false</default><label>GILBARCO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Marca_Generador__c</fullName><externalId>false</externalId><label>Marca Generador</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>DIPERK</fullName><default>false</default><label>DIPERK</label></value><value><fullName>DPOWER</fullName><default>false</default><label>DPOWER</label></value><value><fullName>FG WILSON</fullName><default>false</default><label>FG WILSON</label></value><value><fullName>PERKINS DIPERK</fullName><default>false</default><label>PERKINS DIPERK</label></value><value><fullName>COELMO</fullName><default>false</default><label>COELMO</label></value><value><fullName>JOHN DEERE</fullName><default>false</default><label>JOHN DEERE</label></value><value><fullName>LUREYE</fullName><default>false</default><label>LUREYE</label></value><value><fullName>ARNAT</fullName><default>false</default><label>ARNAT</label></value><value><fullName>DIESEL ENGINE</fullName><default>false</default><label>DIESEL ENGINE</label></value><value><fullName>WAUKESHA, WIS</fullName><default>false</default><label>WAUKESHA, WIS</label></value><value><fullName>GRAIE</fullName><default>false</default><label>GRAIE</label></value><value><fullName>VANGUARD</fullName><default>false</default><label>VANGUARD</label></value><value><fullName>F. G. WILSON</fullName><default>false</default><label>F. G. WILSON</label></value><value><fullName>Agrale</fullName><default>false</default><label>Agrale</label></value><value><fullName>HONDA</fullName><default>false</default><label>HONDA</label></value><value><fullName>HIMOINSA</fullName><default>false</default><label>HIMOINSA</label></value><value><fullName>HATZ</fullName><default>false</default><label>HATZ</label></value><value><fullName>DEUTZ TYPE</fullName><default>false</default><label>DEUTZ TYPE</label></value><value><fullName>STAMFORD</fullName><default>false</default><label>STAMFORD</label></value><value><fullName>SKAND</fullName><default>false</default><label>SKAND</label></value><value><fullName>MAGNUM</fullName><default>false</default><label>MAGNUM</label></value><value><fullName>ATLAS COPCO</fullName><default>false</default><label>ATLAS COPCO</label></value><value><fullName>KOHLER</fullName><default>false</default><label>KOHLER</label></value><value><fullName>BOHLER</fullName><default>false</default><label>BOHLER</label></value><value><fullName>SILENT</fullName><default>false</default><label>SILENT</label></value><value><fullName>CATERPILLAR</fullName><default>false</default><label>CATERPILLAR</label></value><value><fullName>GEPARK</fullName><default>false</default><label>GEPARK</label></value><value><fullName>WEICHAI</fullName><default>false</default><label>WEICHAI</label></value><value><fullName>VIELCO</fullName><default>false</default><label>VIELCO</label></value><value><fullName>CATERPILLAR (NI) LIMITED</fullName><default>false</default><label>CATERPILLAR (NI) LIMITED</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Marca_Motor__c</fullName><externalId>false</externalId><label>Marca Motor</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>PERKINS</fullName><default>false</default><label>PERKINS</label></value><value><fullName>PERKINS DIPERK</fullName><default>false</default><label>PERKINS DIPERK</label></value><value><fullName>LUREYE</fullName><default>false</default><label>LUREYE</label></value><value><fullName>JOHN DEERE</fullName><default>false</default><label>JOHN DEERE</label></value><value><fullName>Agrale</fullName><default>false</default><label>Agrale</label></value><value><fullName>WEICHAI</fullName><default>false</default><label>WEICHAI</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Marca_SGMM__c</fullName><externalId>false</externalId><label>Marca</label><length>35</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Marca_Telemedici_n__c</fullName><externalId>false</externalId><label>Marca Telemedición</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>VEEDER ROOT</fullName><default>false</default><label>VEEDER ROOT</label></value><value><fullName>REGLA</fullName><default>false</default><label>REGLA</label></value><value><fullName>OPW</fullName><default>false</default><label>OPW</label></value><value><fullName>CHINA</fullName><default>false</default><label>CHINA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Matriz__c</fullName><externalId>false</externalId><label>Matriz</label><precision>3</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Mecanismo__c</fullName><externalId>false</externalId><label>Mecanismo</label><length>12</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Mezclador__c</fullName><externalId>false</externalId><label>Mezclador</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>SI</fullName><default>false</default><label>SI</label></value><value><fullName>NO</fullName><default>false</default><label>NO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Modelo_Motor__c</fullName><externalId>false</externalId><label>Modelo Motor</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Modelo__c</fullName><externalId>false</externalId><label>Modelo</label><length>25</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>N_Chasis__c</fullName><externalId>false</externalId><label>N° Chasis</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>N_Motor__c</fullName><externalId>false</externalId><label>N° Motor</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Numero_Faena__c</fullName><externalId>false</externalId><label>Número Faena</label><length>50</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Potencia_Bomba__c</fullName><externalId>false</externalId><label>Potencia Bomba</label><precision>8</precision><required>false</required><scale>3</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Potencia_KVA__c</fullName><externalId>false</externalId><label>Potencia KVA</label><length>17</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Potencia_KW__c</fullName><externalId>false</externalId><label>Potencia KW</label><length>16</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Producto_Tanque__c</fullName><externalId>false</externalId><label>Producto Tanque</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Petroleo</fullName><default>false</default><label>Petroleo</label></value><value><fullName>Kerosene</fullName><default>false</default><label>Kerosene</label></value><value><fullName>93</fullName><default>false</default><label>93</label></value><value><fullName>95</fullName><default>false</default><label>95</label></value><value><fullName>97</fullName><default>false</default><label>97</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Pta_Tipo_Agua_Servida__c</fullName><externalId>false</externalId><label>Pta. Tipo Agua Servida</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>FOSA</fullName><default>false</default><label>FOSA</label></value><value><fullName>LODO ACTIVADO</fullName><default>false</default><label>LODO ACTIVADO</label></value><value><fullName>ALCANTARILLADO</fullName><default>false</default><label>ALCANTARILLADO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Pta_Tipo_II_Agua_Potable__c</fullName><externalId>false</externalId><label>Pta. Tipo II Agua Potable</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>RED PUBLICA</fullName><default>false</default><label>RED PUBLICA</label></value><value><fullName>PLANTA AP</fullName><default>false</default><label>PLANTA AP</label></value><value><fullName>PLANTA</fullName><default>false</default><label>PLANTA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Rotulo_de_Equipos__c</fullName><externalId>false</externalId><label>Rotulo de Equipos</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Soplador__c</fullName><externalId>false</externalId><label>Soplador</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>SI</fullName><default>false</default><label>SI</label></value><value><fullName>NO</fullName><default>false</default><label>NO</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Tipo_DF__c</fullName><externalId>false</externalId><label>Tipo DF</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Macanico</fullName><default>false</default><label>Macanico</label></value><value><fullName>Electronico</fullName><default>false</default><label>Electronico</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Tipo__c</fullName><externalId>false</externalId><label>Tipo</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>DISPENSADOR</fullName><default>false</default><label>DISPENSADOR</label></value><value><fullName>SURTIDOR</fullName><default>false</default><label>SURTIDOR</label></value></valueSetDefinition></valueSet></fields><fields><fullName>VLLD__c</fullName><externalId>false</externalId><label>VLLD</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>NO APLICA</fullName><default>false</default><label>NO APLICA</label></value><value><fullName>PLLD</fullName><default>false</default><label>PLLD</label></value><value><fullName>PLLD No incluye</fullName><default>false</default><label>PLLD No incluye</label></value><value><fullName>SIN DATA</fullName><default>false</default><label>SIN DATA</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Valvula_Sobrellenado__c</fullName><externalId>false</externalId><label>Valvula Sobrellenado</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>SI</fullName><default>false</default><label>SI</label></value><value><fullName>NO</fullName><default>false</default><label>NO</label></value></valueSetDefinition></valueSet></fields><listViews><fullName>Activo_SGME_Generador</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>ASSET.INSTALL_DATE</columns><columns>ACCOUNT.NAME</columns><columns>CONTACT.NAME</columns><columns>PRODUCT2.NAME</columns><filterScope>Everything</filterScope><filters><field>ASSET.NAME</field><operation>contains</operation><value>Generador</value></filters><label>Activo SGME Generador</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>Activo_SGME_Telemedici_n</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>Marca_Telemedici_n__c</columns><columns>Modelo__c</columns><columns>CONTACT.NAME</columns><filterScope>Everything</filterScope><filters><field>ASSET.NAME</field><operation>contains</operation><value>Telemedicion</value></filters><label>Activo SGME Telemedición</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>Activos_MDA</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>ASSET.INSTALL_DATE</columns><columns>Rotulo_de_Equipos__c</columns><columns>File_Estacion_de_Servicio__c</columns><filterScope>Everything</filterScope><filters><field>ASSET.RECORDTYPE</field><operation>equals</operation><value>Asset.MDA</value></filters><label>Activos MDA</label><sharedTo><group>MDA_Field_Service</group></sharedTo></listViews><listViews><fullName>Activos_SGME_Dispensador</fullName><columns>ASSET.NAME</columns><columns>Equipo_Dispensador__c</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>Marca_Dispensador__c</columns><columns>Modelo__c</columns><columns>Caudal__c</columns><columns>Tipo__c</columns><columns>CONTACT.NAME</columns><columns>ASSET.IS_COMPETITOR_PRODUCT</columns><columns>File_Estacion_de_Servicio__c</columns><columns>File__c</columns><filterScope>Everything</filterScope><filters><field>ASSET.NAME</field><operation>contains</operation><value>Dispensador</value></filters><label>Activos SGME Dispensador</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>Activos_SGME_Planta_de_Agua</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>File__c</columns><columns>Pta_Tipo_II_Agua_Potable__c</columns><columns>Pta_Tipo_Agua_Servida__c</columns><columns>CONTACT.NAME</columns><filterScope>Everything</filterScope><filters><field>ASSET.NAME</field><operation>contains</operation><value>Planta de Agua</value></filters><label>Activos SGME Planta de Agua</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>Activos_SGME_Tanques</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>Detector_de_Fuga_DF__c</columns><columns>Tipo_DF__c</columns><columns>CONTACT.NAME</columns><filterScope>Everything</filterScope><filters><field>ASSET.NAME</field><operation>contains</operation><value>Tanque</value></filters><label>Activos SGME Tanques</label><sharedTo><group>SGME_Field_Service</group></sharedTo></listViews><listViews><fullName>Activos_SGMM</fullName><columns>ASSET.NAME</columns><columns>ASSET.SERIAL_NUMBER</columns><columns>ACCOUNT.NAME</columns><columns>CONTACT.NAME</columns><columns>Equipo__c</columns><columns>Numero_Faena__c</columns><columns>Faena__c</columns><filterScope>Everything</filterScope><filters><field>ASSET.RECORDTYPE</field><operation>equals</operation><value>Asset.SGMM</value></filters><label>Activos SGMM</label></listViews><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>Dispensadores</fullName><active>true</active><label>Dispensadores</label></recordTypes><recordTypes><fullName>Generador</fullName><active>true</active><label>Generador</label></recordTypes><recordTypes><fullName>MDA</fullName><active>true</active><label>MDA</label></recordTypes><recordTypes><fullName>Planta_de_Agua</fullName><active>true</active><label>Planta de Agua</label></recordTypes><recordTypes><fullName>SGMM</fullName><active>true</active><label>SGMM</label></recordTypes><recordTypes><fullName>Tanques</fullName><active>true</active><label>Tanques</label></recordTypes><recordTypes><fullName>Telemedici_n</fullName><active>true</active><label>Telemedición</label></recordTypes><sharingModel>ControlledByParent</sharingModel></CustomObject>